--- a/WebApp/SCSS/partials/sideNav.css
+++ b/WebApp/SCSS/partials/sideNav.css
@@ -10,8 +10,8 @@
     cursor: pointer;
     font-size: 1em;
     position: relative;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     background-color: #1A2426;
     padding: 10px 15px;
     z-index: 1;
