--- a/WebApp/SCSS/partials/modal.css
+++ b/WebApp/SCSS/partials/modal.css
@@ -1,16 +1,35 @@
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 10px;
+    position: absolute;
     left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    top: 10%;
+    margin: auto;
+    display: none;
+    z-index: 1;
+    width: 60%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
+    border: 1px solid #0a3254;
+    border-radius: 15px;
     background-color: rgba(0, 0, 0, 0.4);
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', serif;
+    -webkit-animation-name: fadeIn;
+    -webkit-animation-duration: 0.4s;
+    animation-name: fadeIn;
+    animation-duration: 0.4s;
+}
+
+.modal-mainpage {
+    position: fixed;
+    top: 10%;
+    margin: auto;
+    display: none;
+    z-index: 1;
+    width: 60%;
+    overflow: auto;
+    border: 1px solid #0a3254;
+    border-radius: 15px;
+    background-color: rgba(0, 0, 0, 0.4);
+    font-family: 'Open Sans', serif;
     -webkit-animation-name: fadeIn;
     -webkit-animation-duration: 0.4s;
     animation-name: fadeIn;
@@ -18,14 +37,9 @@
 }
 
 .modal-content {
-    position: fixed;
-    overflow: scroll;
+    position: relative;
     bottom: 0;
     background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    width: 100%;
-    height: 80%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -webkit-animation-name: slideIn;
     -webkit-animation-duration: 0.4s;
@@ -76,25 +90,28 @@
 .close {
     color: white;
     float: right;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
+    position: relative;
+    top: 15px;
+    bottom: 15px;
 }
 
 .close:hover,
 .close:focus {
     color: #f22929;
     text-decoration: none;
-    cursor: pointer;
+    cursor: default;
 }
 
 .modal-header {
-    padding: 2px 16px;
+    padding: 1px 30px 1px 30px;
     background-color: #0a3254;
     color: white;
 }
 
 .modal-body {
-    padding: 2px 16px;
+    padding: 10px 20px 20px 20px;
 }
 
 .modal-footer {
