--- a/WebApp/SCSS/stylesheet.css
+++ b/WebApp/SCSS/stylesheet.css
@@ -218,20 +218,43 @@ section {
 header {
     float: left;
     padding: 5px 30px 10px 30px;
-    width: 90%;
+    width: 90.5%;
+    background-color: #F2F2F2;
+}
+
+.logo {
+    float: left;
+    padding-top: 15px;
+    padding-right: 30px;
+    height: 75px;
+    width: 18%;
+    display: flex;
+    align-items: center;
+
+}
+
+.logo img {
+    margin: 0;
 }
 
 .headSearch {
     float: left;
-    width: 40%;
-    vertical-align: middle;
+    width: 50%;
+    padding: 20px 30px 0 30px;
+    font-family: 'Open Sans', sans-serif;
+    height: 75px;
+    text-align: center;
 }
 
 .headWelcome {
     float: right;
-    width: 40%;
+    width: 22%;
     text-align: right;
-    vertical-align: middle;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    font-family: 'Open Sans', sans-serif;
+    height: 75px;
+    color: #18AEE0;
 }
 
 
