--- a/WebApp/SCSS/partials/sideNav.css
+++ b/WebApp/SCSS/partials/sideNav.css
@@ -1,8 +1,8 @@
 .wrapper {
     overflow-x: hidden;
-    min-height: 400px;
+    min-height: 600px;
     position: relative;
-    width: 80%;
+    left: 0;
 }
 
 .toggle {
@@ -10,8 +10,8 @@
     cursor: pointer;
     font-size: 1em;
     position: relative;
-    top: 0;
-    left: 0;
+    top: 0px;
+    left: 0px;
     background-color: #1A2426;
     padding: 10px 15px;
     z-index: 1;
@@ -24,7 +24,8 @@
     color: #fff;
     position: fixed;
     top: 0;
-    left: -22%;
+    left: -306px;
+    width: 285px;
     height: 100%;
 }
 
@@ -46,7 +47,7 @@
 }
 
 .nav-open {
-    left: 19%;
+    left: 243px;
 }
 
 .nav-open .side-nav {
@@ -55,5 +56,5 @@
 
 .wrapper,
 .side-nav {
-    transition: left 0.4s cubic-bezier(.55, 0, .1, 1);
+    transition: left 0.2s cubic-bezier(.55, 0, .1, 1);
 }
