--- a/WebApp/SCSS/partials/testing.css
+++ b/WebApp/SCSS/partials/testing.css
@@ -34,3 +34,18 @@ label input:focus + .label-text {
     font-size: 13px;
     transform: translateY(-54px);
 }
+
+.input-readonly {
+        background-color: transparent;
+        border: 0;
+        border-bottom: 2px solid red;
+        font-size: 18px;
+        outline: 0;
+        padding: 5px 20px;
+        width: 30%;
+}
+
+label .input-readonly:focus {
+    width: 90%;
+    border-bottom: 2px solid red;
+}
