Final Presentation with exported SQL and CSV files

--- a/WebApp/SCSS/partials/_login.scss
+++ b/WebApp/SCSS/partials/_login.scss
@@ -75,28 +75,12 @@
   font-size: 1.3rem;
   color: #FAFAFA;
   animation: scale_header 0.6s cubic-bezier(.55, 0, .1, 1), text_opacity 1s cubic-bezier(.55, 0, .1, 1);
-  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
-              0px 1px 5px 0px rgba(0, 0, 0, 0.12),
-              0px 3px 1px -2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+              0 1px 5px 0 rgba(0, 0, 0, 0.12),
+              0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
 
-.login > header:before {
-  content: '';
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  width: 100%;
-  height: 5px;
-  padding: 10px;
-  margin: -10px 0 0 -10px;
-  box-sizing: border-box;
-  background: rgba(0, 0, 0, 0.156);
-  font-family: 'Roboto', sans-serif;
-  font-size: 0.9rem;
-  color: transparent;
-  z-index: 5;
-}
+
 
 .login.error_1 > header:before,
 .login.error_2 > header:before {
